k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: fcg-users
  labels:
    app: users-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: users-api
